@@ -22,19 +22,22 @@ work in batch mode (no interactive query if files change)
 \fB\-d|\-\-dir\fR <\fIdirectory\fP>
 rpm package result will be written in  <\fIdirectory\fP>.
 .TP 
-\fB\-e|\-\-edit-spec\fR
+\fB\-e|\-\-edit\-spec\fR
 open the generated specfile with your favorite editor before rpm build
 .TP 
-\fB\-k|\-\-keep-perm|\-\-pug-from-fs\fR
+\fB\-k|\-\-keep\-perm|\-\-pug\-from\-fs\fR
 keep installed files permission, uid and gid (do not force to orginal files permission, uid and gid saved in rpm database)
 .TP 
-\fB\-\-pug-from-db (default)\fR
+\fB\-\-pug\-from\-db (default)\fR
 set files permission, uid and gid as saved in rpm database
 .TP 
 \fB\-h|\-\-help\fR
 Output help information and exit.
 .TP 
-\fB\-s|\-\-spec-only\fR <\fIspecfile\fP>
+\fB\-r|\-\-resolv\-dep\fR
+change file dependencies in package dependencies.
+.TP 
+\fB\-s|\-\-spec\-only\fR <\fIspecfile\fP>
 do not rebuild package. only generate specfile.
 .TP 
 \fB\-v|\-\-verbose\fR
@@ -59,15 +62,15 @@ used to specify an editor for specfile
 .LP 
 To build an rpm package as closed as possible to original one:
 .LP 
-rpm \-\-rpmrebuid \-b package 
+rpm \-\-rpmrebuid \-\-batch package 
 .LP 
 to build a modified package :
 .LP 
-rpm \-\-rpmrebuild \-k package
+rpm \-\-rpmrebuild \-\-keep\-perm package
 .LP 
 if you have problem with rpm building, and if you know specfile syntax, you can also edit it:
 .LP 
-rpm \-\-rpmrebuild \-e package
+rpm \-\-rpmrebuild  \-\-edit\-spec package
 .SH "AUTHORS"
 .LP 
 Eric Gerbier <gerbier@users.sourceforge.net>
